# libole2

./: LICENSE  Makefile.am  aclocal.m4  autogen.sh  buildrpm.sh  configure  libole2-2.0.pc.in  libole2-config.h  libole2-config.h.in  libole2.spec  libole2.spec.in  mkinstalldirs
el5/sources/libole2-2.2.8/: AUTHORS  ChangeLog  Makefile.in  TODO  confdefs.h  config.cache  configure  configure.in  libole2-2.0.pc  libole2-2.0.pc.in  libole2-config.h  libole2.spec  mkinstalldirs
el5/sources/libole2-2.2.8/libole2/: Makefile.in  ms-ole-summary.h  version.c
libole2/: Makefile.am  README  dllmain.cpp  libole2.def  libole2.h  libole2.sln  libole2.vcproj  ms-ole-gnomevfs.c  ms-ole-summary.c  ms-ole.c
libole2/win32/lib/: libole2.lib
libole2/win32/map/: libole2.map
test/: Makefile.am  Makefile.in  test-ole.c
